fixing appbar avatar offcenter

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,13 +3,17 @@
 @tailwind utilities;
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.debug * {
+  border: 1px solid black;
 }
